--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Background"
     tools:context="com.example.theo1.nutripocket.CreateProfile2Activity">
 
 
@@ -63,11 +64,11 @@
         android:id="@+id/goal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:entries="@array/goalSpinner"
-        android:spinnerMode="dropdown"
         android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp" />
+        android:layout_marginTop="53dp"
+        android:entries="@array/goalSpinner"
+        android:spinnerMode="dropdown" />
 
     <TextView
         android:id="@+id/textView2"
@@ -78,7 +79,7 @@
         android:layout_marginBottom="47dp"
         android:text="@string/activityLevel"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="italic" />
 
@@ -90,7 +91,7 @@
         android:layout_centerVertical="true"
         android:text="@string/goal"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="italic" />
 
