Blank Create Profile/Main Activity

--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -39,7 +39,9 @@
             android:inputType="textPersonName"
             android:hint="@string/nameFirst"
             android:textAlignment="center"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:textColor="@color/regularText"
+            android:textColorHint="@color/regularText"/>
 
         <EditText
             android:id="@+id/nameLast"
@@ -51,7 +53,9 @@
             android:inputType="textPersonName"
             android:hint="@string/nameLast"
             android:textAlignment="center"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:textColor="@color/regularText"
+            android:textColorHint="@color/regularText"/>
 
     </LinearLayout>
 
@@ -75,7 +79,9 @@
             android:inputType="number"
             android:hint="@string/age"
             android:textAlignment="center"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:textColor="@color/regularText"
+            android:textColorHint="@color/regularText"/>
 
         <EditText
             android:id="@+id/height"
@@ -86,7 +92,9 @@
             android:inputType="number"
             android:hint="@string/height"
             android:textAlignment="center"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:textColor="@color/regularText"
+            android:textColorHint="@color/regularText"/>
 
         <EditText
             android:id="@+id/weight"
@@ -97,7 +105,9 @@
             android:layout_marginRight="5dp"
             android:inputType="number"
             android:hint="@string/weight"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:textColor="@color/regularText"
+            android:textColorHint="@color/regularText"/>
 
     </LinearLayout>
 
@@ -118,7 +128,7 @@
 
     <Button
         android:id="@+id/CP1Button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.07"
         android:background="@color/Background"
@@ -126,6 +136,6 @@
         android:text="@string/CP1Button"
         android:textColor="@android:color/background_light"
         android:textSize="14sp"
-        android:textStyle="italic" />
+        android:textStyle="bold" />
 
 </LinearLayout>
