--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="Background">#d50000</color>
+    <color name="darkBackground">#e63333</color>
+    <color name="emphasisText">#FFFFFF</color>
+    <color name="regularText">#FAFAFA</color>
 
 </resources>
