--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -121,9 +121,10 @@
 
         <com.example.theo1.nutripocket.customviews.NoDefaultSpinnerG
             android:id="@+id/gender"
-            android:layout_width="173dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:entries="@array/genderSpinner" />
+            android:entries="@array/genderSpinner"
+            android:layout_marginLeft="5dp"/>
     </LinearLayout>
 
     <Button
