--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -64,10 +64,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_weight="0.05"
+        android:gravity="right|center"
         android:orientation="horizontal"
-        android:weightSum="1"
-        android:layout_weight="0.05">
+        android:weightSum="1">
 
 
         <EditText
