--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.05"
-        android:gravity="right|center"
+        android:gravity="center_horizontal|center"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -104,9 +104,7 @@
             android:id="@+id/weight"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="26dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
             android:backgroundTint="@color/emphasisText"
             android:hint="@string/weight"
             android:inputType="number"
