--- a/app/src/main/res/layout/activity_level_descriptions.xml
+++ b/app/src/main/res/layout/activity_level_descriptions.xml
@@ -6,8 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.theo1.nutripocket.activityLevelDescriptionsActivity"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:background="@color/Background"
     android:weightSum="1">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="10dp">
 
 
     <LinearLayout
@@ -23,6 +29,7 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:text="@string/sedentaryTitle"
+            android:textColor="@color/emphasisText"
             android:textStyle="bold" />
 
         <Button
@@ -37,50 +44,60 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sedentaryDesc"
+        android:textColor="@color/regularText"
         android:layout_margin="5dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lightlyTitle"
         android:textStyle="bold"
+        android:textColor="@color/emphasisText"
+
         android:layout_marginTop="8dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lightlyDesc"
+        android:textColor="@color/regularText"
         android:layout_margin="5dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/modTitle"
         android:textStyle="bold"
+        android:textColor="@color/emphasisText"
         android:layout_marginTop="8dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/modDesc"
+        android:textColor="@color/regularText"
         android:layout_margin="5dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/heavilyTitle"
         android:textStyle="bold"
+        android:textColor="@color/emphasisText"
         android:layout_marginTop="8dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/heavilyDesc"
+        android:textColor="@color/regularText"
         android:layout_margin="5dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/extTitle"
         android:textStyle="bold"
+        android:textColor="@color/emphasisText"
         android:layout_marginTop="8dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/extDesc"
+        android:textColor="@color/regularText"
         android:layout_margin="5dp"/>
 
     <TextView
@@ -89,7 +106,8 @@
         android:layout_margin="20dp"
         android:text="@string/noticeDesc"
         android:textSize="12sp"
+        android:textColor="@color/regularText"
         android:textStyle="italic" />
 
-
+    </LinearLayout>
 </LinearLayout>
