--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -12,10 +12,10 @@
         android:id="@+id/activityLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="90dp"
+        android:entries="@array/activitySpinner"
         android:layout_above="@+id/textView3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="78dp"
-        android:entries="@array/activitySpinner" />
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:id="@+id/CP2top"
@@ -50,7 +50,7 @@
         android:text="@string/CP2Button"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="80dp"
         android:layout_below="@+id/goal"
         android:layout_centerHorizontal="true" />
 
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp"
+        android:layout_marginTop="20dp"
         android:entries="@array/goalSpinner"
         android:spinnerMode="dropdown" />
 
@@ -79,11 +79,11 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/CP2Info"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/activityLevel"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="32sp"
         android:textStyle="italic" />
 
     <TextView
@@ -95,7 +95,7 @@
         android:text="@string/goal"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="32sp"
         android:textStyle="italic" />
 
 
