--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,6 +153,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/prefRectTitle"
                 android:background="#00000000"
                 android:layout_alignLeft="@id/prefRect"
                 android:layout_alignTop="@id/prefRect"
