--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:id="@+id/calorieGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.17"
+        android:layout_weight="0.14"
+        android:gravity="center"
         android:text="@string/calorieGoal"
         android:textAlignment="center"
         android:textSize="24sp" />
@@ -22,25 +23,27 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.26">
+        android:layout_weight="0.18"
+        android:gravity="center_vertical">
 
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@id/calorieProgressBar"
+            android:layout_alignLeft="@id/calorieProgressBar"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@id/calorieProgressBar"
+            android:background="#00000000"
+            android:text="@string/calorieCurrent"
+            android:textAlignment="textStart" />
 
         <ProgressBar
             android:id="@+id/calorieProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignBottom="@id/calorieProgressBar"
-            android:layout_alignLeft="@id/calorieProgressBar"
-            android:layout_alignRight="@id/calorieProgressBar"
-            android:layout_alignTop="@id/calorieProgressBar"
-            android:background="#00000000"
-            android:text="@string/calorieCurrent" />
 
 
     </RelativeLayout>
@@ -50,13 +53,18 @@
         android:id="@+id/macroNutrientTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0.10"
         android:text="@string/macroNutrientTitle"
-        android:layout_weight="0.14" />
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/mnGoalValues"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.10"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -64,19 +72,24 @@
             android:id="@+id/carbValueGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/carbValueGoal" />
+            android:text="@string/carbValueGoal"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/proteinValueGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/proteinValueGoal" />
+            android:layout_marginLeft="115dp"
+            android:layout_marginRight="115dp"
+            android:text="@string/proteinValueGoal"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/fatValueGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fatValueGoal" />
+            android:text="@string/fatValueGoal"
+            android:textAlignment="center" />
 
 
     </LinearLayout>
@@ -85,27 +98,38 @@
         android:id="@+id/mnGoalTitles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.07"
-        android:gravity="center"
+        android:layout_weight="0.20"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/carbGoalTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/carbGoalTitle" />
+            android:text="@string/carbGoalTitle"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/proteinGoalTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/proteinGoalTitle" />
+            android:layout_marginLeft="90dp"
+            android:layout_marginRight="90dp"
+            android:text="@string/proteinGoalTitle"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/fatGoalTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fatGoalTitle" />
+            android:text="@string/fatGoalTitle"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
@@ -121,7 +145,8 @@
         android:layout_height="53dp"
         android:gravity="bottom"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="2"
+        android:layout_weight="0.17">
 
 
         <RelativeLayout
@@ -133,7 +158,8 @@
             <View
                 android:id="@+id/logRect"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="48dp"
+                android:background="@color/Background" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -144,14 +170,15 @@
                 android:background="#00000000"
                 android:gravity="center_vertical"
                 android:text="@string/logRect"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="@android:color/white" />
 
         </RelativeLayout>
 
         <Button
             android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -161,7 +188,8 @@
             <View
                 android:id="@+id/prefRect"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="48dp"
+                android:background="@color/Background" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -172,7 +200,8 @@
                 android:background="#00000000"
                 android:gravity="center_vertical"
                 android:text="@string/prefRect"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light" />
 
         </RelativeLayout>
     </LinearLayout>
