--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -12,9 +12,10 @@
         android:id="@+id/view1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
         android:layout_above="@+id/textView3"
-        android:layout_marginBottom="60dp"/>
+        android:layout_marginBottom="60dp"
+        android:background="@android:color/darker_gray" />
+
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
