--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,39 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.example.theo1.nutripocket.MainActivity"
-    android:orientation="vertical">
-
+    android:weightSum="1">
 
 
     <TextView
         android:id="@+id/calorieGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/calorieGoal" />
+        android:layout_weight="0.11"
+        android:gravity="center"
+        android:text="@string/calorieGoal"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:layout_weight="0.08"
+        android:gravity="center_vertical">
 
 
         <ProgressBar
             android:id="@+id/calorieProgressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
+            android:layout_height="100dp" />
 
         <TextView
-            android:background="#00000000"
-            android:layout_alignLeft="@id/calorieProgressBar"
-            android:layout_alignTop="@id/calorieProgressBar"
-            android:layout_alignRight="@id/calorieProgressBar"
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_alignBottom="@id/calorieProgressBar"
+            android:layout_alignLeft="@id/calorieProgressBar"
+            android:layout_alignParentTop="@id/calorieProgressBar"
+            android:layout_alignRight="@id/calorieProgressBar"
+            android:background="#00000000"
+            android:gravity="center_vertical"
             android:text="@string/calorieCurrent"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content" />
+            android:textAlignment="textStart" />
 
 
     </RelativeLayout>
@@ -46,31 +54,43 @@
         android:id="@+id/macroNutrientTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/macroNutrientTitle" />
+        android:layout_weight="0.15"
+        android:text="@string/macroNutrientTitle"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/mnGoalValues"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.10"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/carbValueGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/carbValueGoal" />
+            android:text="@string/carbValueGoal"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/proteinValueGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/proteinValueGoal" />
+            android:layout_marginLeft="115dp"
+            android:layout_marginRight="115dp"
+            android:text="@string/proteinValueGoal"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/fatValueGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fatValueGoal" />
+            android:text="@string/fatValueGoal"
+            android:textAlignment="center" />
 
 
     </LinearLayout>
@@ -79,25 +99,38 @@
         android:id="@+id/mnGoalTitles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.29"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/carbGoalTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/carbGoalTitle" />
+            android:text="@string/carbGoalTitle"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/proteinGoalTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/proteinGoalTitle" />
+            android:layout_marginLeft="90dp"
+            android:layout_marginRight="90dp"
+            android:text="@string/proteinGoalTitle"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/fatGoalTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fatGoalTitle" />
+            android:text="@string/fatGoalTitle"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
@@ -105,15 +138,16 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buttonCaloricBreakdown"/>
-
+        android:text="@string/buttonCaloricBreakdown" />
 
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="53dp"
+        android:gravity="bottom"
+        android:orientation="horizontal"
         android:weightSum="2"
-        android:orientation="horizontal">
+        android:layout_weight="0.27">
 
 
         <RelativeLayout
@@ -125,23 +159,27 @@
             <View
                 android:id="@+id/logRect"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="48dp"
+                android:background="@color/Background" />
 
             <TextView
-                android:background="#00000000"
-                android:layout_alignLeft="@id/logRect"
-                android:layout_alignTop="@id/logRect"
-                android:layout_alignRight="@id/logRect"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
                 android:layout_alignBottom="@id/logRect"
+                android:layout_alignLeft="@id/logRect"
+                android:layout_alignRight="@id/logRect"
+                android:background="#00000000"
+                android:gravity="center_vertical"
                 android:text="@string/logRect"
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content" />
+                android:textAlignment="center"
+                android:textColor="@android:color/white" />
 
         </RelativeLayout>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:id="@+id/button"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -151,22 +189,23 @@
             <View
                 android:id="@+id/prefRect"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="48dp"
+                android:background="@color/Background" />
+
             <TextView
-                android:id="@+id/prefRectTitle"
-                android:background="#00000000"
-                android:layout_alignLeft="@id/prefRect"
-                android:layout_alignTop="@id/prefRect"
-                android:layout_alignRight="@id/prefRect"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
                 android:layout_alignBottom="@id/prefRect"
+                android:layout_alignLeft="@id/prefRect"
+                android:layout_alignRight="@id/prefRect"
+                android:background="#00000000"
+                android:gravity="center_vertical"
                 android:text="@string/prefRect"
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content" />
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light" />
 
-    </RelativeLayout>
+        </RelativeLayout>
     </LinearLayout>
-
-
 
 
 </LinearLayout>
