--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -61,6 +61,15 @@
         android:entries="@array/goalSpinner"
         android:spinnerMode="dropdown" />
 
+    <com.example.theo1.nutripocket.customviews.NoDefaultSpinnerBT
+        android:id="@+id/bodyType"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:entries="@array/goalSpinner"
+        android:spinnerMode="dropdown"
+        android:layout_below="@+id/textView13"
+        android:layout_alignStart="@+id/activityLevel"
+        android:layout_marginTop="19dp" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
