--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/goal"
-        android:background="@android:color/darker_gray">
+        android:background="@android:color/darker_gray"/>
 
     <com.example.theo1.nutripocket.customviews.NoDefaultSpinnerAL
         android:id="@+id/activityLevel"
