--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -193,6 +193,7 @@
                 android:background="@color/Background" />
 
             <TextView
+                android:id="@+id/prefRectTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_alignBottom="@id/prefRect"
