--- a/app/src/main/res/layout/activity_create_profile2.xml
+++ b/app/src/main/res/layout/activity_create_profile2.xml
@@ -51,6 +51,17 @@
         android:layout_toEndOf="@+id/activityLevel"
         android:background="@android:drawable/ic_menu_help" />
 
+    <Button
+        android:id="@+id/CP2Info2"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@+id/bodyType"
+        android:layout_alignTop="@+id/bodyType"
+        android:layout_toEndOf="@id/bodyType"
+        android:background="@android:drawable/ic_menu_help"/>
+
+
+
     <com.example.theo1.nutripocket.customviews.NoDefaultSpinnerGL
         android:id="@+id/goal"
         android:layout_width="200dp"
