--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,11 @@
 
         <ProgressBar
             android:id="@+id/calorieProgressBar"
+            android:scaleY="5"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:layout_margin="10dp"/>
 
         <TextView
             android:id="@+id/currentCalories"
