--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="regularText">#fafafa</color>
 
     <color name="blue">#0000FF</color>
+    <color name="lightGrey">#E1E1E1</color>
 
 </resources>
